workspace/second/src/objects/ISO_Country__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ISO_Code__c</fullName>
        <label>ISO_Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wesr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>wesr</label>
        <type>Checkbox</type>
    </fields>
    <label>ISO_Countries</label>
</CustomObject>